@@ -82,6 +82,7 @@ BA 27- [libpari] ZpX_ZpXQ_liftroot, ZpX_ZpXQ_liftroot_ea
        ellpadicheightmatrix, ellpadics2, ellpadiclog
 BA 30- [libpari] function FpX_powu
 BA 31- GP function ellpadicfrobenius
+   32- [libpari] funtcion RgX_normalize
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
